height issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -425,14 +425,14 @@
   .wrong-answer-normal {
     background: white;
     width: 50%;
-    height: 60%;
+    height: 60vh;
     margin-top: 4em;
     font-size: 36px;
   }
 
   .rocket-modal, .correct-answer-rocket, .wrong-answer-rocket {
     width: 50%;
-    height: 60%;
+    height: 60vh;
     margin-top: 4em;
     font-size: 36px;
   }
@@ -463,7 +463,7 @@
   }
 
   #modal-text {
-    height: 80%;
+    height: 80vh;
     margin-top: 1em;
     font-size: 26px;
   }
